--- a/templates/success.html
+++ b/templates/success.html
@@ -3,7 +3,7 @@
 <title>success</title>  
 </head>  
 <body>  
-    <h2>Login successful</h2>  
-    <a href="/profile">View Profile</a>  
+<p>File uploaded successfully</p>  
+<p>File Name: {{name}}</p>  
 </body>  
-</html>  
+</html>
