--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,7 @@
     <title>login</title>  
 </head>  
 <body>  
-    <form method = "post" action = "http://localhost:5000/success">  
+    <form method = "post" action = "http://localhost:5000/validate">  
         <table>  
             <tr><td>Email</td><td><input type = 'email' name = 'email'></td></tr>  
             <tr><td>Password</td><td><input type = 'password' name = 'pass'></td></tr>  
