--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,11 @@
     <title>login</title>  
 </head>  
 <body>  
-    <form method = "post" action = "http://localhost:5000/validate">  
+    {% if error %}  
+        <p><strong>Error</strong>: {{error}}</p>  
+    {% endif %}  
+  
+    <form method = "post" action = "/login">  
         <table>  
             <tr><td>Email</td><td><input type = 'email' name = 'email'></td></tr>  
             <tr><td>Password</td><td><input type = 'password' name = 'pass'></td></tr>  
